test/sema/positive/tuples01.impala
fn f(x:(int,int)) -> (int,int) {
   x
}
