test/sema/negative/wrong_return1.impala
fn f(x : int) -> bool {
   x
}
